crates/compiler/semantic/tests/common/snapshots/diagnostics__expressions::type_errors::test_assignment_type_mismatch_with_context.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
description: "Inline semantic validation error test: expressions::type_errors::test_assignment_type_mismatch_with_context"
---
Fixture: semantic_tests::expressions::type_errors::test_assignment_type_mismatch_with_context
============================================================
Source code:

        struct Point { x: felt, y: felt }

        fn test() {
            let x: felt = 10;
            let p = Point { x: 1, y: 2 };
            x = p;  // Should show variable type context
            return();
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: type mismatch in assignment: expected `felt`, got `Point`
   ╭─[ semantic_tests::expressions::type_errors::test_assignment_type_mismatch_with_context:7:17 ]
   │
 7 │             x = p;  // Should show variable type context
   │             ┬   ┬  
   │             ╰────── variable declared with type `felt`
   │                 │  
   │                 ╰── type mismatch in assignment: expected `felt`, got `Point`
   │                 │  
   │                 ╰── This struct has numeric fields that could be accessed
───╯
