crates/compiler/semantic/tests/common/snapshots/diagnostics__expressions::type_errors::test_struct_with_numeric_field_suggestion.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
description: "Inline semantic validation error test: expressions::type_errors::test_struct_with_numeric_field_suggestion"
---
Fixture: semantic_tests::expressions::type_errors::test_struct_with_numeric_field_suggestion
============================================================
Source code:

        struct Counter { value: felt }

        fn test() {
            let c = Counter { value: 42 };
            let result = c * 2;  // Should suggest accessing 'value' field
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Invalid left operand for arithmetic operator 'Mul'. Expected 'felt', found 'Counter'
   ╭─[ semantic_tests::expressions::type_errors::test_struct_with_numeric_field_suggestion:6:26 ]
   │
 6 │             let result = c * 2;  // Should suggest accessing 'value' field
   │                          ┬  
   │                          ╰── Invalid left operand for arithmetic operator 'Mul'. Expected 'felt', found 'Counter'
   │                          │  
   │                          ╰── Did you mean to access the 'value' field?
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::expressions::type_errors::test_struct_with_numeric_field_suggestion:4:12 ]
   │
 4 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
